# libqmap

./: .gitignore  BUGS.md  BUGS_AND_API_CHANGES.md  CHANGELOG.md  Doxyfile  IMPROVEMENTS.md  Makefile  README.md  REFACTORING_SUMMARY.md  bench_multivalue  expects.txt  objects-set.mk  qmap-real.sh  qmap.pc  test.sh  test_multivalue
.github/: CODEOWNERS
.github/workflows/: ci.yml  test.yml
doc/: qmap.md
include/: qidm.h
include/ttypt/: idm.h  qmap.h
rust-bindings/: Cargo.toml  build.rs
rust-bindings/src/: bindings.rs  lib.rs
snap/: 1hello0hi.txt  assoc-bail.txt  assoc-bail2.txt  assoc.txt  assoc3.txt  hi.txt  xxd-1.txt
src/: bench_multivalue.c  idm.c  libqmap.c  qmap.c  save_test.c  test.c  test_extended.c  test_multivalue.c  test_record.c  test_trunc.c  test_trunc2.c  test_trunc3.c
