[package]
name = "qmap-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for qmap"
license = "BSD-2-Clause"
repository = "https://github.com/quirinpa/qmap"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = { version = "0.2", default-features = false }

[profile.release]
lto = true
